--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="#fefefe"> -->
         <!-- <link rel="manifest" href="/manifest.json"> -->
         <!-- <link rel="icon" href="css/img/IN_Design_logo.ico"/> -->
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
+        <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body>
         <article class="container">
@@ -101,6 +101,6 @@
         </article>
     </body>
 
-    <script src="{{ url_for('static', filename='js/three.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/particle-effects.js') }}"></script>
+    <script src="filename='js/three.js"></script>
+    <script src="filename='js/particle-effects.js"></script>
 </html>
