--- a/index.html
+++ b/index.html
@@ -101,6 +101,6 @@
         </article>
     </body>
 
-    <script src="filename='js/three.js"></script>
-    <script src="filename='js/particle-effects.js"></script>
+    <script src="js/three.js"></script>
+    <script src="js/particle-effects.js"></script>
 </html>
