--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
                     <h1>About</h1>
 
                     <p>
-                        Welcome! I'm Dan, I enjoy programming, fish keeping, nature, and distance running. 
-                        I made this site for me to post things I'm working on, thinking about or learning about, as a way to
-                        document my progress, flesh out ideas, and develop a deeper understanding respectively.
-                        I am close to graduating from Texas A&M University and looking for work for after I graduate in May.
+                        Hello! I'm Dan, welcome to this website I made. A bit about me: I enjoy programming, beer, fish keeping, and distance running. 
+                        I made this site for me to post things I'm working on, thinking about or learning about as a way to
+                        document my progress, and reference later when I forget.
+                        I graduated from Texas A&M University in 2021 and currently work at ASML - Brion in San Jose, CA.
                     </p>
                     <p>
-                        I'm excited to learn more about programming topics including hardware design, embedded systems, 
-                        computer graphics, and parallel computing. I also like to dabble in web development every now and again,
+                        I'm excited to learn more about any programming topics but mostly related to hardware design, embedded systems, 
+                        computer graphics, and parallel computing. I also like to do some web development occasionally,
                         so I'll also have some web development content on here.
-                        This website will serve to motivate me and to document in one form or another the multitude of
-                        project ideas I try and juggle around. Hopely I can keep things up to date and thanks for reading!
+                        This website will serve to motivate me and to document in one form or another my few
+                        project and ideas. Hopely I can keep things up to date and thanks for reading.
                     </p>
                 </section>
 
@@ -50,6 +50,7 @@
                     <ul>
                         <li><a href="https://www.instudiodesigngroup.com">instudiodesigngroup.com</a>: INStudionDesignGroup</li>
                         <li><a class="drop-down-display">Linux administrator</a>: Texas A&M University</li>
+                        <li><a class="drop-down-display">HPC systems engineer</a>: ASML - Brion SV</li>
                     </ul>
                 </section>
 
