--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                     </h1>
 
                     <ul>
-                       <li><a href="https::/www.github.com/DanielIrons/ledge_engine">ledge engine</a> : A graphics backend written in Rust using Vulkano and Winit</li>
-                       <li><a href="https::/www.github.com/DanielIrons/">unnamed UDP based protocol</a> : A networking protocol used for game data communication</li>
-                       <li><a href="https::/www.github.com/DanielIrons/mips_processor">mips microproccessor</a> : A basic pipelined microprocessor implemented in Verilog</li> 
+                       <li><a href="https::/www.github.com/DanielIrons/ledge">ledge</a> : A graphics backend written in Rust using Vulkano and Winit</li>
+                       <li><a href="https::/www.github.com/DanielIrons/udp_proto">unnamed UDP based protocol</a> : A networking protocol used for game data communication</li>
+                       <li><a href="https::/www.github.com/DanielIrons/mips_processor">MIPS microproccessor</a> : A basic pipelined microprocessor implemented in Verilog</li> 
                        <li><a href="https::/www.github.com/DanielIrons/sizer">sizer</a> : A new project to create a synthesizer with a few basic functions in VHDL</li> 
                     </ul>
                 </section>
@@ -75,7 +75,7 @@
                         <svg height="48" viewBox="0 0 48 48" width="48" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h48v48H0z" fill="none"/>
                             <path d="M22 34h4V22h-4v12zm2-30C12.95 4 4 12.95 4 24s8.95 20 20 20 20-8.95 20-20S35.05 4 24 4zm0 36c-8.82 0-16-7.18-16-16S15.18 8 24 8s16 7.18 16 16-7.18 16-16 16zm-2-22h4v-4h-4v4z"/>
                         </svg>
-                        <small>This is where I make blog type posts about things I've been doing</small>
+                        <small>No posts here, seems like I've been lazy lately.</small>
                     </h1>
 
                     <p>I gotta find something interesting to write about.</p>
