--- a/index.html
+++ b/index.html
@@ -102,6 +102,6 @@
         </article>
     </body>
 
-    <script src="js/three.js"></script>
+    <script src="js/three.min.js"></script>
     <script src="js/particle-effects.js"></script>
 </html>
